--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/logo.gif"
+              src="assets/Logo.gif"
               alt="Music Bot Logo"
               width="30"
               height="30"
@@ -81,10 +81,10 @@
       <!-- Hero entry 👌 -->
       <div class="hero">
         <div id="hero" class="text-center">
-          <h1>Discord Music Bot</h1>
+          <h1>Crash's Music</h1>
           <p>
-            An advanced discord music bot, supports Spotify, Soundcloud, YouTube
-            with Shuffling, Volume Control and Web Dashboard!
+            Um avançado bot de música do discord, suporta Spotify, Soundcloud, YouTube
+            com Shuffling, Controle de Volume e Painel de Controle da Web!
           </p>
         </div>
       </div>
@@ -96,10 +96,9 @@
           <div class="row justify-content-center text-center">
             <div class="col-md-10 col-lg-8">
               <div class="header-section">
-                <h2 class="title">Exclusive <span>Features</span></h2>
+                <h2 class="title">Recursos <span>Exclusivos</span></h2>
                 <p class="description">
-                  There are many Features in discord music bot! Every awesome
-                  features of this bot has been described below check it out 😉
+                  Existem muitos recursos no bot! Cada incrível características deste bot foram descritas abaixo confira 😉
                 </p>
               </div>
             </div>
@@ -109,12 +108,12 @@
               <div class="single-service">
                 <div class="part-1">
                   <i class="fab fa-spotify"></i>
-                  <h3 class="title">Spotify, Sound Cloud, YouTube Support</h3>
+                  <h3 class="title">Suporte a Spotify, Sound Cloud e YouTube</h3>
                 </div>
                 <div class="part-2">
                   <p class="description">
-                    Use your spotify playlist, youtube videos, youtube playlists
-                    and much more using this bot
+                    Use a sua spotify playlist, youtube videos, youtube playlists
+                    e muito mais usando este bot
                   </p>
                 </div>
               </div>
@@ -123,11 +122,11 @@
               <div class="single-service">
                 <div class="part-1">
                   <i class="fas fa-music"></i>
-                  <h3 class="title">Lag free music</h3>
+                  <h3 class="title">Música sem lag</h3>
                 </div>
                 <div class="part-2">
                   <p class="description">
-                    Bot never lags while playing a song in a voice channel
+                    O bot nunca fica para trás durante a reprodução de uma música em um canal de voz
                   </p>
                 </div>
               </div>
@@ -136,12 +135,12 @@
               <div class="single-service">
                 <div class="part-1">
                   <i class="fas fa-sliders-h"></i>
-                  <h3 class="title">Server Settings</h3>
+                  <h3 class="title">Configurações do servidor</h3>
                 </div>
                 <div class="part-2">
                   <p class="description">
-                    Control your song looping song or queue, You can even change
-                    server prefix and server dj role
+                    Controle sua música em looping ou fila, você pode até mudar
+                    prefixo do server e o cargo do seu DJ
                   </p>
                 </div>
               </div>
@@ -152,7 +151,7 @@
       <!-- End Features -->
 
       <!-- Commands -->
-      <div class="commands" id="commands">
+      /*<div class="commands" id="commands">
         <div class="container">
           <h2 class="title text-center">Commands</h2>
           <table class="table table-dark">
@@ -167,7 +166,7 @@
             <tbody id="commands-body"></tbody>
           </table>
         </div>
-      </div>
+      </div>*/
       <!-- End Commands -->
       <!-- Footer -->
       <div class="footer">
@@ -177,14 +176,7 @@
               <div class="copyright-text">
                 <p>
                   © 2021
-                  <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                    >Discord Music Bot</a
-                  >. All rights reserved. Made by
-                  <a href="//github.com/SudhanPlayz">Sudhan</a> and its
-                  <a
-                    href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                    >contributors</a
-                  >
+                    Crash's Music. All rights reserved. Made by Taleszito.
                 </p>
               </div>
             </div>
