--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="assets/Logo.gif"
+              src="./assets/Logo.gif"
               alt="Music Bot Logo"
               width="30"
               height="30"
@@ -51,7 +51,7 @@
             <div class="d-flex justify-content-center">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
               <a class="nav-link" href="#features">Features</a>
-              <a class="nav-link" href="#commands">Commands</a>
+              /*<a class="nav-link" href="#commands">Commands</a>*/
             </div>
             <a
               href="/dashboard"
@@ -70,7 +70,7 @@
                 <a class="nav-link" href="#features">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#commands">Commands</a>
+                /*<a class="nav-link" href="#commands">Commands</a>*/
               </li>
             </ul>
           </div>
