--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="shortcut icon" href="/logo.gif" type="image/gif" />
+    <link rel="shortcut icon" href="/standard.gif" type="image/gif" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -158,27 +158,20 @@
             </div>
           </section>
           <!-- Footer -->
-          <div class="footer">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="copyright-text">
-                    <p>
-                      © 2021
-                      <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                        >Discord Music Bot</a
-                      >. All rights reserved. Made by
-                      <a href="//github.com/SudhanPlayz">Sudhan</a> and its
-                      <a
-                        href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                        >contributors</a
-                      >
-                    </p>
-                  </div>
-                </div>
+      <div class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="copyright-text">
+                <p>
+                  © 2021
+                    Crash's Music. All rights reserved. Made by Taleszito.
+                </p>
               </div>
             </div>
           </div>
+        </div>
+      </div>
           <!-- End Footer -->
         </div>
       </main>
