--- a/views/server.html
+++ b/views/server.html
@@ -169,27 +169,20 @@
             </div>
           </section>
           <!-- Footer -->
-          <div class="footer">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="copyright-text">
-                    <p>
-                      © 2021
-                      <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                        >Discord Music Bot</a
-                      >. All rights reserved. Made by
-                      <a href="//github.com/SudhanPlayz">Sudhan</a> and its
-                      <a
-                        href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                        >contributors</a
-                      >
-                    </p>
-                  </div>
-                </div>
+      <div class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="copyright-text">
+                <p>
+                  © 2021
+                    Crash's Music. All rights reserved. Made by Taleszito.
+                </p>
               </div>
             </div>
           </div>
+        </div>
+      </div>
           <!-- End Footer -->
         </div>
       </main>
