--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
             <div class="d-flex justify-content-center">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
               <a class="nav-link" href="#features">Features</a>
-              /*<a class="nav-link" href="#commands">Commands</a>*/
+              <a class="nav-link" href="#commands">Commands</a>
             </div>
             <a
               href="/dashboard"
@@ -70,7 +70,7 @@
                 <a class="nav-link" href="#features">Features</a>
               </li>
               <li class="nav-item">
-                /*<a class="nav-link" href="#commands">Commands</a>*/
+                <a class="nav-link" href="#commands">Commands</a>
               </li>
             </ul>
           </div>
@@ -151,7 +151,7 @@
       <!-- End Features -->
 
       <!-- Commands -->
-      /*<div class="commands" id="commands">
+      <div class="commands" id="commands">
         <div class="container">
           <h2 class="title text-center">Commands</h2>
           <table class="table table-dark">
@@ -166,7 +166,7 @@
             <tbody id="commands-body"></tbody>
           </table>
         </div>
-      </div>*/
+      </div>
       <!-- End Commands -->
       <!-- Footer -->
       <div class="footer">
